🚧 Make up the header component

--- a/style.html
+++ b/style.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+  <header class="header">
+    <h1 class="h1">샐러드·과일·채소</h1>
+    <div class="align both">
+      <div><button class="btn-prev" aria-label="이전으로"></button></div>
+      <div>
+        <button class="btn-menu" aria-label="전체메뉴"></button>
+        <button class="btn-cart" aria-label="장바구니"><span>1</span></button>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
