🚧 Mark up GNB component

--- a/style.html
+++ b/style.html
@@ -17,5 +17,14 @@
       </div>
     </div>
   </header>
+  <nav class="gnb">
+    <ul>
+      <li class="ico1"><a href="">홈</a></li>
+      <li class="ico2"><a href="">검색</a></li>
+      <li class="ico3"><a href="">결제·적립</a></li>
+      <li class="ico4"><a href="">주문내역</a></li>
+      <li class="ico5"><a href="">MY</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
