🚧 Mark up guide page

--- a/style.html
+++ b/style.html
@@ -17,6 +17,24 @@
       </div>
     </div>
   </header>
+  <main class="guide-pad">
+    <nav class="guide">
+      <ul>
+        <li><a href="#guide1">탭메뉴</a></li>
+        <li><a href="#guide2">상품리스트</a></li>
+        <li><a href="#guide3">버튼</a></li>
+        <li><a href="#guide4">온라인 서식</a></li>
+        <li><a href="#guide5">콘텐츠 제목</a></li>
+        <li><a href="#guide6">텍스트</a></li>
+      </ul>
+    </nav>
+    <h2 class="h2" id="guide1">탭메뉴</h2>
+    <h2 class="h2" id="guide2">상품리스트</h2>
+    <h2 class="h2" id="guide3">버튼</h2>
+    <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
+    <h2 class="h2" id="guide5">콘텐츠 제목</h2>
+    <h2 class="h2" id="guide6">텍스트</h2>
+  </main>
   <nav class="gnb">
     <ul>
       <li class="ico1"><a href="">홈</a></li>
