🚧 Mark up 3 types of tab menus

--- a/style.html
+++ b/style.html
@@ -29,6 +29,33 @@
       </ul>
     </nav>
     <h2 class="h2" id="guide1">탭메뉴</h2>
+    <nav>
+      <ul class="tab-type1">
+        <li class="tab-type1--active"><button>탭1</button></li>
+        <li><button>탭2</button></li>
+      </ul>
+    </nav>
+    <nav>
+      <ul class="tab-type2">
+        <li class="tab-type2--active"><a href="">탭1</a></li>
+        <li><a href="">탭2</a></li>
+        <li><a href="">탭3</a></li>
+        <li><a href="">탭4</a></li>
+        <li><a href="">탭5</a></li>
+        <li><a href="">탭6</a></li>
+        <li><a href="">탭7</a></li>
+        <li><a href="">탭8</a></li>
+        <li><a href="">탭9</a></li>
+      </ul>
+    </nav>
+    <nav>
+      <ul class="tab-type3">
+        <li class="tab-type3--active"><a href="">탭1</a></li>
+        <li><a href="">탭2</a></li>
+        <li><a href="">탭3</a></li>
+        <li><a href="">탭4</a></li>
+      </ul>
+    </nav>
     <h2 class="h2" id="guide2">상품리스트</h2>
     <h2 class="h2" id="guide3">버튼</h2>
     <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
