🚧 Mark up typography by title type

--- a/style.html
+++ b/style.html
@@ -60,6 +60,11 @@
     <h2 class="h2" id="guide3">버튼</h2>
     <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
     <h2 class="h2" id="guide5">콘텐츠 제목</h2>
+    <h1 class="h1">.h1</h1>
+    <h2 class="h2">.h2</h2>
+    <h2 class="h2-2">.h2-2</h2>
+    <h2 class="h2-3">.h2-3</h2>
+    <h3 class="h3">.h3</h3>
     <h2 class="h2" id="guide6">텍스트</h2>
   </main>
   <nav class="gnb">
