--- a/style.html
+++ b/style.html
@@ -61,7 +61,7 @@
         <li>
           <a href="">
             <div class="shop-list__thumb">
-              <div class="badge">
+              <div class="badge black">
                 <span class="hide">상품구매혜택</span>
                 N+1
               </div>
@@ -79,32 +79,35 @@
           </a>
           <div class="align both">
             <div>
-              <div class="badge">배달</div>
+              <div class="badge purple">배달</div>
             </div>
             <div>
               <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
             </div>
             <div class="shop-list__price">
               <div class="shop-list__price--sale">
-                <span class="hide">할인율</span>50%
+                <span class="hide">할인율</span>
+                50%
               </div>
               <div class="shop-list__price--original">
-                <span class="hide">원가</span>1,400원
+                <span class="hide">원가</span>
+                1,400원
               </div>
               <div class="shop-list__price--sell">
-                <span class="hide">판매가</span>700원
+                <span class="hide">판매가</span>
+                700원
               </div>
             </div>
-            <div class="shop-list__hashtag">
+            <div class="shop-list__hashtag align left">
               <span class="hide">상품태그</span>
-              <div class="badge">POP할인</div>
+              <div class="badge grey">POP할인</div>
             </div>
             <div class="shop-list__rating">
               <span class="hide">별점</span> 4.6 (00)
