--- a/style.html
+++ b/style.html
@@ -17,6 +17,7 @@
         </div>
       </div>
     </header>
+
     <main class="guide-pad">
       <nav class="guide">
         <ul>
@@ -28,6 +29,7 @@
           <li><a href="#guide6">텍스트</a></li>
         </ul>
       </nav>
+
       <h2 class="h2" id="guide1">탭메뉴</h2>
       <nav>
         <ul class="tab-type1">
@@ -56,7 +58,9 @@
           <li><a href="">탭4</a></li>
         </ul>
       </nav>
+
       <h2 class="h2" id="guide2">상품리스트</h2>
+      <h3 class="h3">상품리스트 타입1</h3>
       <ul class="shop-list">
         <li>
           <a href="">
@@ -81,12 +85,12 @@
             <div>
               <div class="badge purple">배달</div>
             </div>
-            <div>
+            <div class="shop-list__funcbtn">
               <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info mt8">
+          <a href="" class="shop-list__info">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -105,7 +109,175 @@
                 700원
               </div>
             </div>
-            <div class="shop-list__hashtag align left">
+            <div class="shop-list__hashtag">
+              <span class="hide">상품태그</span>
+              <div class="badge grey">POP할인</div>
+            </div>
+            <div class="shop-list__rating">
+              <span class="hide">별점</span> 4.6 (00)
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div class="shop-list__thumb">
+              <div class="badge black">
+                <span class="hide">상품구매혜택</span>
+                N+1
+              </div>
+              <img
+                src="images/@thumb1.svg"
+                class="shop-list__thumb__large"
+                alt=""
+              />
+              <img
+                src="images/@thumb2.svg"
+                class="shop-list__thumb__small"
+                alt=""
+              />
+            </div>
+          </a>
+          <div class="align both">
+            <div>
+              <div class="badge purple">배달</div>
+            </div>
+            <div class="shop-list__funcbtn">
+              <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
+              <button class="btn-cart" aria-label="장바구니 담기"></button>
+            </div>
+          </div>
+          <a href="" class="shop-list__info">
+            <div class="shop-list__title">
+              <span class="hide">제품명</span>
+              신라면 컵라면 + 신라면 봉지라면 (2입)
+            </div>
+            <div class="shop-list__price">
+              <div class="shop-list__price--sale">
+                <span class="hide">할인율</span>
+                50%
+              </div>
+              <div class="shop-list__price--original">
+                <span class="hide">원가</span>
+                1,400원
+              </div>
+              <div class="shop-list__price--sell">
+                <span class="hide">판매가</span>
+                700원
+              </div>
+            </div>
+            <div class="shop-list__hashtag">
+              <span class="hide">상품태그</span>
+              <div class="badge grey">POP할인</div>
+            </div>
+            <div class="shop-list__rating">
+              <span class="hide">별점</span> 4.6 (00)
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div class="shop-list__thumb">
+              <div class="badge black">
+                <span class="hide">상품구매혜택</span>
+                N+1
+              </div>
+              <img
+                src="images/@thumb1.svg"
+                class="shop-list__thumb__large"
+                alt=""
+              />
+              <img
+                src="images/@thumb2.svg"
+                class="shop-list__thumb__small"
+                alt=""
+              />
+            </div>
+          </a>
+          <div class="align both">
+            <div>
+              <div class="badge purple">배달</div>
+            </div>
+            <div class="shop-list__funcbtn">
+              <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
+              <button class="btn-cart" aria-label="장바구니 담기"></button>
+            </div>
+          </div>
+          <a href="" class="shop-list__info">
+            <div class="shop-list__title">
+              <span class="hide">제품명</span>
+              신라면 컵라면 + 신라면 봉지라면 (2입)
+            </div>
+            <div class="shop-list__price">
+              <div class="shop-list__price--sale">
+                <span class="hide">할인율</span>
+                50%
+              </div>
+              <div class="shop-list__price--original">
+                <span class="hide">원가</span>
+                1,400원
+              </div>
+              <div class="shop-list__price--sell">
+                <span class="hide">판매가</span>
+                700원
+              </div>
+            </div>
+            <div class="shop-list__hashtag">
+              <span class="hide">상품태그</span>
+              <div class="badge grey">POP할인</div>
+            </div>
+            <div class="shop-list__rating">
+              <span class="hide">별점</span> 4.6 (00)
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div class="shop-list__thumb">
+              <div class="badge black">
+                <span class="hide">상품구매혜택</span>
+                N+1
+              </div>
+              <img
+                src="images/@thumb1.svg"
+                class="shop-list__thumb__large"
+                alt=""
+              />
+              <img
+                src="images/@thumb2.svg"
+                class="shop-list__thumb__small"
+                alt=""
+              />
+            </div>
+          </a>
+          <div class="align both">
+            <div>
+              <div class="badge purple">배달</div>
+            </div>
+            <div class="shop-list__funcbtn">
+              <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
+              <button class="btn-cart" aria-label="장바구니 담기"></button>
+            </div>
+          </div>
+          <a href="" class="shop-list__info">
+            <div class="shop-list__title">
+              <span class="hide">제품명</span>
+              신라면 컵라면 + 신라면 봉지라면 (2입)
+            </div>
+            <div class="shop-list__price">
+              <div class="shop-list__price--sale">
+                <span class="hide">할인율</span>
+                50%
+              </div>
+              <div class="shop-list__price--original">
+                <span class="hide">원가</span>
+                1,400원
+              </div>
+              <div class="shop-list__price--sell">
+                <span class="hide">판매가</span>
+                700원
+              </div>
+            </div>
+            <div class="shop-list__hashtag">
               <span class="hide">상품태그</span>
               <div class="badge grey">POP할인</div>
             </div>
