🚧 Mark up shop-list type2: list

--- a/style.html
+++ b/style.html
@@ -287,6 +287,69 @@
           </a>
         </li>
       </ul>
+
+      <h3 class="h3">상품리스트 타입2</h3>
+      <ul class="shop-list list">
+        <li>
+          <a href="">
+            <div class="shop-list__thumb">
+              <div class="badge skyblue">
+                <span class="hide">순위</span>
+                1
+              </div>
+              <img
+                src="images/@thumb1.svg"
+                class="shop-list__thumb__large"
+                alt=""
+              />
+              <img
+                src="images/@thumb2.svg"
+                class="shop-list__thumb__small"
+                alt=""
+              />
+            </div>
+          </a>
+          <a href="" class="shop-list__info">
+            <div>
+              <div class="badge black2">스파클링</div>
+              <div class="badge white">칠레</div>
+              <div class="badge purple">배달</div>
+              <div class="badge grey">카드할인</div>
+            </div>
+            <div class="shop-list__title">
+              <span class="hide">제품명</span>
+              신라면 컵라면 + 신라면 봉지라면 (2입)
+            </div>
+            <div class="shop-list__price">
+              <div class="shop-list__price--sale">
+                <span class="hide">할인율</span>
+                50%
+              </div>
+              <div class="shop-list__price--original">
+                <span class="hide">원가</span>
+                1,400원
+              </div>
+              <div class="shop-list__price--sell">
+                <span class="hide">판매가</span>
+                700원
+              </div>
+            </div>
+            <div class="shop-list__hashtag">
+              <span class="hide">상품태그</span>
+              <div class="badge grey">POP할인</div>
+            </div>
+          </a>
+          <div class="align both vm">
+            <div class="shop-list__rating">
+              <span class="hide">별점</span> 4.6 (00)
+            </div>
+            <div class="shop-list__funcbtn">
+              <button class="btn-like" aria-label="좋아요 즐겨찾기"></button>
+              <button class="btn-cart" aria-label="장바구니 담기"></button>
+            </div>
+          </div>
+        </li>
+      </ul>
       <h2 class="h2" id="guide3">버튼</h2>
       <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
       <h2 class="h2" id="guide5">콘텐츠 제목</h2>
