🚧 Mark up two types of buttons

--- a/style.html
+++ b/style.html
@@ -410,7 +410,11 @@
           </a>
         </li>
       </ul>
+
       <h2 class="h2" id="guide3">버튼</h2>
+      <button class="btn white">흰색버튼</button>
+      <a href="" class="btn black">검정버튼</a>
+
       <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
       <h2 class="h2" id="guide5">콘텐츠 제목</h2>
       <h1 class="h1">.h1</h1>
