🚧 Mark up four types of input forms: text, radio, checkbox, spinner

--- a/style.html
+++ b/style.html
@@ -416,6 +416,26 @@
       <a href="" class="btn black">검정버튼</a>
 
       <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
+      <input type="text" />
+      <br />
+      <input type="text" readonly />
+      <br />
+      <input type="radio" name="rag" id="ra1_1" />
+      <label for="ra1_1">선택1</label>
+      <input type="radio" name="rag" id="ra1_2" />
+      <label for="ra1_2">선택2</label>
+      <br /><br />
+      <input type="checkbox" id="chk1_1" />
+      <label for="chk1_1">선택1</label>
+      <input type="checkbox" id="chk1_2" />
+      <label for="chk1_2">선택2</label>
+      <br /><br />
+      <div class="spinner">
+        <input type="number" value="1">
+        <button class="spinner-minus" aria-label="감소"></button>
+        <button class="spinner-plus" aria-label="증가"><button>
+      </div>
+
       <h2 class="h2" id="guide5">콘텐츠 제목</h2>
       <h1 class="h1">.h1</h1>
       <h2 class="h2">.h2</h2>
