🚧 Apply space style in .mt to class

--- a/style.html
+++ b/style.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
 
-      <h2 class="h2" id="guide1">탭메뉴</h2>
+      <h2 class="h2 mt100" id="guide1">탭메뉴</h2>
       <nav>
         <ul class="tab-type1">
           <li class="tab-type1--active"><button>탭1</button></li>
@@ -59,7 +59,7 @@
         </ul>
       </nav>
 
-      <h2 class="h2" id="guide2">상품리스트</h2>
+      <h2 class="h2 mt100" id="guide2">상품리스트</h2>
       <h3 class="h3">상품리스트 타입1</h3>
       <ul class="shop-list">
         <li>
@@ -81,7 +81,7 @@
               />
             </div>
           </a>
-          <div class="align both">
+          <div class="align both mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -90,7 +90,7 @@
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -137,7 +137,7 @@
               />
             </div>
           </a>
-          <div class="align both">
+          <div class="align both mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -146,7 +146,7 @@
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -193,7 +193,7 @@
               />
             </div>
           </a>
-          <div class="align both">
+          <div class="align both mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -202,7 +202,7 @@
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -249,7 +249,7 @@
               />
             </div>
           </a>
-          <div class="align both">
+          <div class="align both mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -258,7 +258,7 @@
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -288,7 +288,7 @@
         </li>
       </ul>
 
-      <h3 class="h3">상품리스트 타입2</h3>
+      <h3 class="h3 mt30">상품리스트 타입2</h3>
       <ul class="shop-list list">
         <li>
           <a href="">
@@ -309,7 +309,7 @@
               />
             </div>
           </a>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div>
               <div class="badge black2">스파클링</div>
               <div class="badge white">칠레</div>
@@ -351,7 +351,7 @@
         </li>
       </ul>
 
-      <h3 class="h3">상품리스트 타입3</h3>
+      <h3 class="h3 mt30">상품리스트 타입3</h3>
       <ul class="shop-list card">
         <li>
           <a href="">
@@ -372,7 +372,7 @@
               />
             </div>
           </a>
-          <div class="align both">
+          <div class="align both mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -381,7 +381,7 @@
               <button class="btn-cart" aria-label="장바구니 담기"></button>
             </div>
           </div>
-          <a href="" class="shop-list__info">
+          <a href="" class="shop-list__info mt8">
             <div class="shop-list__title">
               <span class="hide">제품명</span>
               신라면 컵라면 + 신라면 봉지라면 (2입)
@@ -411,11 +411,11 @@
         </li>
       </ul>
 
-      <h2 class="h2" id="guide3">버튼</h2>
+      <h2 class="h2 mt100" id="guide3">버튼</h2>
       <button class="btn white">흰색버튼</button>
       <a href="" class="btn black">검정버튼</a>
 
-      <h2 class="h2" id="guide4">온라인 서식(Form)</h2>
+      <h2 class="h2 mt100" id="guide4">온라인 서식(Form)</h2>
       <input type="text" />
       <br />
       <input type="text" readonly />
@@ -436,13 +436,13 @@
         <button class="spinner-plus" aria-label="증가"><button>
       </div>
 
-      <h2 class="h2" id="guide5">콘텐츠 제목</h2>
+      <h2 class="h2 mt100" id="guide5">콘텐츠 제목</h2>
       <h1 class="h1">.h1</h1>
       <h2 class="h2">.h2</h2>
       <h2 class="h2-2">.h2-2</h2>
       <h2 class="h2-3">.h2-3</h2>
       <h3 class="h3">.h3</h3>
-      <h2 class="h2" id="guide6">텍스트</h2>
+      <h2 class="h2 mt100" id="guide6">텍스트</h2>
     </main>
     <nav class="gnb">
       <ul>
