✨ Create and apply a .vm align to class

--- a/style.html
+++ b/style.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <h1 class="h1">샐러드·과일·채소</h1>
-      <div class="align both">
+      <div class="align both vm">
         <div><button class="btn-prev" aria-label="이전으로"></button></div>
         <div>
           <button class="btn-menu" aria-label="전체메뉴"></button>
@@ -81,7 +81,7 @@
               />
             </div>
           </a>
-          <div class="align both mt12">
+          <div class="align both vm mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -137,7 +137,7 @@
               />
             </div>
           </a>
-          <div class="align both mt12">
+          <div class="align both vm mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -193,7 +193,7 @@
               />
             </div>
           </a>
-          <div class="align both mt12">
+          <div class="align both vm mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -249,7 +249,7 @@
               />
             </div>
           </a>
-          <div class="align both mt12">
+          <div class="align both vm mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
@@ -372,7 +372,7 @@
               />
             </div>
           </a>
-          <div class="align both mt12">
+          <div class="align both vm mt12">
             <div>
               <div class="badge purple">배달</div>
             </div>
