✨ Declare margin space with the class .m and apply its style

--- a/shoplist.html
+++ b/shoplist.html
@@ -35,7 +35,7 @@
       </nav>
 
       <h2 class="hide">상품리스트 모두</h2>
-      <ul class="shop-list">
+      <ul class="shop-list m16">
         <li>
           <a href="">
             <div class="shop-list__thumb">
