🚧 Mark up a payment page: agree to terms of service

--- a/payment.html
+++ b/payment.html
@@ -104,6 +104,32 @@
           </div>
         </div>
       </div>
+      <hr class="hr-line" />
+
+      <div class="agree-box">
+        <ul>
+          <li>
+            <label for="chk1"> (필수) 주문내역 확인 </label>
+            <input type="checkbox" id="chk1" />
+            <a href="" class="btn-agree" aria-label="약관읽기"></a>
+          </li>
+          <li>
+            <label for="chk2"> (필수) 개인정보 수집 및 이용 동의 </label>
+            <input type="checkbox" id="chk2" />
+            <a href="" class="btn-agree" aria-label="약관읽기"></a>
+          </li>
+          <li>
+            <label for="chk3"> (필수) 택배서비스 이용 동의 </label>
+            <input type="checkbox" id="chk3" />
+            <a href="" class="btn-agree" aria-label="약관읽기"></a>
+          </li>
+          <li>
+            <label for="chk4"> (필수) 개인정보 제3자 제공 동의 </label>
+            <input type="checkbox" id="chk4" />
+            <a href="" class="btn-agree" aria-label="약관읽기"></a>
+          </li>
+        </ul>
+      </div>
 
       <div class="bottom-fix">
         <button class="btn black">56,855원 결제하기</button>
